--- a/MXB105 Exam Notes Alternate.tex
+++ b/MXB105 Exam Notes Alternate.tex
@@ -45,20 +45,23 @@
     \section*{Derivative Rules}
     \begin{table}[H]
         \centering
-        \begin{tabular}{>{$}c<{$} | >{$}c<{$}}
+        \begin{tabular}{c c}
             \toprule
-            f(x)                               & f'(x)                                            \\
+            \(f(x)\)                               & \(f'(x)\)                                            \\
             \midrule
-            u(x)v(x)                           & u'v + uv'                                        \\
-            \displaystyle\frac{u(x)}{v(x)}     & \displaystyle\frac{u'v - uv'}{v^2}               \\
-            u\bigl( v\left( x \right) \bigr)   & u'\bigl( v(x) \bigr)v'(x)                        \\
-            \ln{\bigl( u\left(x\right) \bigr)} & \displaystyle\frac{u'(x)}{u(x)}                  \\
-            \sin{\left( ax \right)}            & a\cos{\left( ax \right)}                         \\
-            \cos{\left( ax \right)}            & -a\sin{\left( ax \right)}                        \\
-            \tan{\left( ax \right)}            & a\sec^2{\left( ax \right)}                       \\
-            \cot{\left( ax \right)}            & -a\csc^2{\left( ax \right)}                      \\
-            \sec{\left( ax \right)}            & a\sec{\left( ax \right)}\tan{\left( ax \right)}  \\
-            \csc{\left( ax \right)}            & -a\csc{\left( ax \right)}\cot{\left( ax \right)} \\
+            \(u(x)v(x)\)                           & \(u'v + uv'\)                                        \\
+            \(\displaystyle\frac{u(x)}{v(x)}\)     & \(\displaystyle\frac{u'v - uv'}{v^2}\)               \\
+            \(u\bigl( v\left( x \right) \bigr)\)   & \(u'\bigl( v(x) \bigr)v'(x)\)                        \\
+            \midrule
+            \(x^{n}\)                              & \(nx^{n - 1}\)                                       \\
+            \(\ln{\bigl( u\left(x\right) \bigr)}\) & \(\displaystyle\frac{u'(x)}{u(x)}\)                  \\
+            \midrule
+            \(\sin{\left( ax \right)}\)            & \(a\cos{\left( ax \right)}\)                         \\
+            \(\cos{\left( ax \right)}\)            & \(-a\sin{\left( ax \right)}\)                        \\
+            \(\tan{\left( ax \right)}\)            & \(a\sec^2{\left( ax \right)}\)                       \\
+            \(\cot{\left( ax \right)}\)            & \(-a\csc^2{\left( ax \right)}\)                      \\
+            \(\sec{\left( ax \right)}\)            & \(a\sec{\left( ax \right)}\tan{\left( ax \right)}\)  \\
+            \(\csc{\left( ax \right)}\)            & \(-a\csc{\left( ax \right)}\cot{\left( ax \right)}\) \\
             \bottomrule
         \end{tabular}
     \end{table}
@@ -81,13 +84,13 @@
     \begin{align*}
         \int f\bigl(g\left( x \right)\bigr)\dv{g(x)}{x} \dd{x} & = \int f(u) \dv{u}{x}\dd{x}
     \end{align*}
-    where $u = g(x)$.
+    where \(u = g(x)\).
     \section*{Trigonometric Substitutions}
     Substitute the appropriate value in and find that the value under the root is now square.
-    Calculate $\dv{x}{\theta}$ to change the variable.
+    Calculate \(\dv{x}{\theta}\) to change the variable.
     Use substitution to find the new limits.
 
-    Sine ($a^2-b^2x^2$, $x=\frac{a}{b}\sin{\left( \theta \right)}$)
+    Sine (\(a^2-b^2x^2\), \(x=\frac{a}{b}\sin{\left( \theta \right)}\))
     \begin{center}
         \begin{tikzpicture}[scale=0.5]
             \coordinate (A) at (-1.5cm,-1.0cm);
@@ -102,7 +105,7 @@
         \end{tikzpicture}
     \end{center}
 
-    Tangent ($a^2+b^2x^2$, $x=\frac{a}{b}\tan{\left( \theta \right)}$)
+    Tangent (\(a^2+b^2x^2\), \(x=\frac{a}{b}\tan{\left( \theta \right)}\))
     \begin{center}
         \begin{tikzpicture}[scale=0.5]
             \coordinate (A) at (-1.5cm,-1.0cm);
@@ -117,7 +120,7 @@
         \end{tikzpicture}
     \end{center}
 
-    Secant ($b^2x^2-a^2$, $x=\frac{a}{b}\sec{\left( \theta \right)}$)
+    Secant (\(b^2x^2-a^2\), \(x=\frac{a}{b}\sec{\left( \theta \right)}\))
     \begin{center}
         \begin{tikzpicture}[scale=0.5]
             \coordinate (A) at (-1.5cm,-1.0cm);
@@ -133,20 +136,20 @@
     \end{center}
 
     \section*{L'Hôpital's Rule}
-    If $\displaystyle \lim_{x\to x_0}f(x)=\lim_{x\to x_0}g(x)=0$ or $\pm\infty$, then
-    $\displaystyle \lim_{x\to x_0}\frac{f(x)}{g(x)} = \lim_{x\to x_0}\frac{f'(x)}{g'(x)}$.
+    If \(\displaystyle \lim_{x\to x_0}f(x)=\lim_{x\to x_0}g(x)=0\) or \(\pm\infty\), then
+    \(\displaystyle \lim_{x\to x_0}\frac{f(x)}{g(x)} = \lim_{x\to x_0}\frac{f'(x)}{g'(x)}\).
     \section*{Continuity}
-    $f(x)$ continuous at $c$ iff $\displaystyle \lim_{x\to c} f(x) = f(c)$.
+    \(f(x)\) continuous at \(c\) iff \(\displaystyle \lim_{x\to c} f(x) = f(c)\).
 
-    $f(x)$ is continuous on $I:\left( a,\:b \right)$ if it is continuous
-    for all $x\in I$.
+    \(f(x)\) is continuous on \(I:\left( a,\:b \right)\) if it is continuous
+    for all \(x\in I\).
 
-    $f(x)$ is continuous on $I:\left[ a,\:b \right]$ if it is continuous
-    for all $x\in I$, but only right continuous at $a$ and left continuous at $b$.
+    \(f(x)\) is continuous on \(I:\left[ a,\:b \right]\) if it is continuous
+    for all \(x\in I\), but only right continuous at \(a\) and left continuous at \(b\).
     \section*{Intermediate Value Theorem}
-    If $f(x)$ is continuous on $I:\left[ a, \: b \right]$ and $f(a) \leq c \leq f(b)$, then $\exists x\in I:f(x)=c$.
+    If \(f(x)\) is continuous on \(I:\left[ a, \: b \right]\) and \(f(a) \leq c \leq f(b)\), then \(\exists x\in I:f(x)=c\).
     \section*{Differentiability}
-    $f(x)$ is differentiable at $x=x_0$ iff
+    \(f(x)\) is differentiable at \(x=x_0\) iff
     \begin{equation*}
         f'(x_0) = \lim_{x\to x_0} \frac{f(x)-f(x_0)}{x-x_0}
     \end{equation*}
@@ -156,7 +159,7 @@
     \end{equation*}
     Differentiability implies continuity.
     \section*{Mean Value Theorem}
-    If $f(x)$ is continuous and differentiable on $I:\left[ a,\:b \right]$, then
+    If \(f(x)\) is continuous and differentiable on \(I:\left[ a,\:b \right]\), then
     \begin{equation*}
         \exists c\in I:f'(c)=\frac{f(b)-f(a)}{b-a}.
     \end{equation*}
@@ -173,35 +176,35 @@
     \begin{equation*}
         f(x) \approx p_n(x) = \sum_{k=0}^n \frac{f^{\left( k \right)}(x_0)}{k!} \left( x-x_0 \right)^k
     \end{equation*}
-    The Taylor Series is taking the limit as $n$ goes to infinity of $p_n$.
+    The Taylor Series is taking the limit as \(n\) goes to infinity of \(p_n\).
 
-    \textbf{Maclaurin Series:} $x_0 = 0$.
+    \textbf{Maclaurin Series:} \(x_0 = 0\).
     \section*{Common Maclaurin Series}
     \begin{table}[H]
         \centering
-        \begin{tabular}{c | c | c}
+        \begin{tabular}{c c c}
             \toprule
             \textbf{Function}         & \textbf{Series Term}                                        & \textbf{Conv.}           \\
             \midrule
-            $\e^{x}$                  & $\frac{x^n}{n!}$                                            & all $x$                  \\
-            $\sin{\left( x \right)}$  & $\left( -1 \right)^n \frac{x^{2n+1}}{\left( 2n+1 \right)!}$ & all $x$                  \\
-            $\cos{\left( x \right)}$  & $\left( -1 \right)^n \frac{x^{2n}}{\left( 2n \right)!}$     & all $x$                  \\
-            $\frac{1}{1-x}$           & $x^n$                                                       & $\left( -1,\: 1 \right)$ \\
-            $\frac{1}{1+x^2}$         & $\left( -1 \right)^n x^{2n}$                                & $\left( -1,\: 1 \right)$ \\
-            $\ln{\left( 1+x \right)}$ & $\left( -1 \right)^{n+1} \frac{x^n}{n}$                     & $\left( -1,\: 1 \right]$ \\
+            \(\e^{x}\)                  & \(\frac{x^n}{n!}\)                                            & all \(x\)                  \\
+            \(\sin{\left( x \right)}\)  & \(\left( -1 \right)^n \frac{x^{2n+1}}{\left( 2n+1 \right)!}\) & all \(x\)                  \\
+            \(\cos{\left( x \right)}\)  & \(\left( -1 \right)^n \frac{x^{2n}}{\left( 2n \right)!}\)     & all \(x\)                  \\
+            \(\frac{1}{1-x}\)           & \(x^n\)                                                       & \(\left( -1,\: 1 \right)\) \\
+            \(\frac{1}{1+x^2}\)         & \(\left( -1 \right)^n x^{2n}\)                                & \(\left( -1,\: 1 \right)\) \\
+            \(\ln{\left( 1+x \right)}\) & \(\left( -1 \right)^{n+1} \frac{x^n}{n}\)                     & \(\left( -1,\: 1 \right]\) \\ % chktex 9
             \bottomrule
         \end{tabular}
     \end{table}
-    \textbf{Power Series:} $\sum_{n=0}^{\infty} c_n\left( x-x_0 \right)^n$
+    \textbf{Power Series:} \(\sum_{n=0}^{\infty} c_n\left( x-x_0 \right)^n\)
     \section*{Series Tests}
-    For a series of the form $\displaystyle\sum_{i=i_0}^\infty a_i$:
+    For a series of the form \(\displaystyle\sum_{i=i_0}^\infty a_i\):
     \section*{Alternating Series Test}
-    Given $a_i = \left( -1 \right)^i b_i$ and $b_i>0$.
+    Given \(a_i = \left( -1 \right)^i b_i\) and \(b_i>0\).
 
-    If $b_{i+1}\leqslant b_i$ \& $\lim_{i\to\infty}b_i=0$, then
+    If \(b_{i+1}\leqslant b_i\) \& \(\lim_{i\to\infty}b_i=0\), then
     convergent, else inconclusive.
     \section*{Ratio Test}
-    Given $\rho = \lim_{i\to\infty}\abs{\frac{a_{i+1}}{a_i}}$:
+    Given \(\rho = \lim_{i\to\infty}\abs{\frac{a_{i+1}}{a_i}}\):
     \begin{align*}
         \rho < 1 & : \text{convergent}   \\
         \rho > 1 & : \text{divergent}    \\
@@ -210,53 +213,53 @@
     \section*{Multivariable Functions}
     \textbf{Partial Derivatives} are done w.r.t one variable, other variables unchanged.
 
-    The \textbf{Gradient} is $\symbf{\nabla}f = \avec[\big]{\pdv{f}{x},\: \pdv{f}{y},\: \dots}$
+    The \textbf{Gradient} is \(\symbf{\nabla}f = \avec[\big]{\pdv{f}{x},\: \pdv{f}{y},\: \dots}\)
     \section*{Level Curves}
     \begin{equation*}
         L_c\left( f \right) = \bigl\{ \left( x,\: y \right) : f\left(x,\: y\right) = c\bigr\}
     \end{equation*}
-    If $f(x,\: y) \to L$ as $(x,\: y) \to (x_0,\: y_0)$, then
-    $\displaystyle \lim_{(x,\: y) \to (x_0,\: y_0)} = L$ along any smooth
-    curve. The limit does not exist if $L$ changes along different smooth curves.
+    If \(f(x,\: y) \to L\) as \((x,\: y) \to (x_0,\: y_0)\), then
+    \(\displaystyle \lim_{(x,\: y) \to (x_0,\: y_0)} = L\) along any smooth
+    curve. The limit does not exist if \(L\) changes along different smooth curves.
 
     \section*{Multivariable Chain Rule}
-    For $\pdv{f}{s}$, create a tree from $f$ to the variable $s$.
-    On each edge, where the node above is $a$ and below is $b$, each edge is $\pdv{a}{b}$.
-    Traverse each path between $f$ and $s$ and multiply the edges.
+    For \(\pdv{f}{s}\), create a tree from \(f\) to the variable \(s\).
+    On each edge, where the node above is \(a\) and below is \(b\), each edge is \(\pdv{a}{b}\).
+    Traverse each path between \(f\) and \(s\) and multiply the edges.
     Add each path together.
-    (i.e. for $f(x, y), x(s,t), y(s,t)$, $\pdv{f}{s} = \pdv{f}{x}\pdv{x}{s}+\pdv{f}{y}\pdv{y}{s}$)
+    (i.e.\ for \(f(x, y), x(s,t), y(s,t)\), \(\pdv{f}{s} = \pdv{f}{x}\pdv{x}{s}+\pdv{f}{y}\pdv{y}{s}\))
     \section*{Directional Derivatives}
     \begin{align*}
         \symbf{D}_{\symbfit{u}}f = \symbf{\nabla}_{\symbfit{u}}f
          & = \symbf{\nabla}f \cdot \symbfit{u}
     \end{align*}
-    where $\symbfit{u}$ is a unit vector and the slope is given by $\norm{\symbf{\nabla}_{\symbfit{u}}f}$.
-    If $\symbf{\nabla}_{\symbfit{u}}f=0$, $\symbfit{u}$ is tangent to the level curve at $\symbfit{x}_0$.
+    where \(\symbfit{u}\) is a unit vector and the slope is given by \(\norm{\symbf{\nabla}_{\symbfit{u}}f}\).
+    If \(\symbf{\nabla}_{\symbfit{u}}f=0\), \(\symbfit{u}\) is tangent to the level curve at \(\symbfit{x}_0\).
     \begin{align*}
         \max_{\norm{\symbfit{u}} = 1} \symbf{\nabla}_{\symbfit{u}}f = \symbf{\nabla}f
     \end{align*}
-    If $\symbf{\nabla}f\neq 0$, $\symbf{\nabla}f$ is a normal vector to the level curve at $\symbfit{x}_0$.
+    If \(\symbf{\nabla}f\neq 0\), \(\symbf{\nabla}f\) is a normal vector to the level curve at \(\symbfit{x}_0\).
     \section*{Critical Points}
-    $(x_0,\: y_0)$ is a critical point if $\symbf{\nabla}f(x_0,\: y_0) = \symbf{0}$
-    or if $\symbf{\nabla}f(x_0,\: y_0)$ is undefined.
+    \((x_0,\: y_0)\) is a critical point if \(\symbf{\nabla}f(x_0,\: y_0) = \symbf{0}\)
+    or if \(\symbf{\nabla}f(x_0,\: y_0)\) is undefined.
     \section*{Classification of Critical Points}
     \begin{equation*}
         D = f_{xx}f_{yy} - \left( f_{xy} \right)^2
     \end{equation*}
     \begin{description}
-        \item[$D > 0$ and $f_{xx} < 0$:] local maxima
-        \item[$D > 0$ and $f_{xx} > 0$:] local minima
-        \item[$D < 0$:] saddle point
-        \item[$D = 0$:] inconclusive
+        \item[\(D > 0\) and \(f_{xx} < 0\):] local maxima
+        \item[\(D > 0\) and \(f_{xx} > 0\):] local minima
+        \item[\(D < 0\):] saddle point
+        \item[\(D = 0\):] inconclusive
     \end{description}
     \section*{Double Integrals}
     The volume of the solid
-    enclosed between the surface $z=f(x,\: y)$ and the region $\Omega$ is
+    enclosed between the surface \(z=f(x,\: y)\) and the region \(\Omega\) is
     defined by
     \begin{equation*}
         V = \iint\limits_{\Omega} f(x,\: y) \dd{A}.
     \end{equation*}
-    If $\Omega$ is a region bounded by $a \leq x \leq b$ and $c \leq y \leq d$, then
+    If \(\Omega\) is a region bounded by \(a \leq x \leq b\) and \(c \leq y \leq d\), then
     \begin{align*}
         \iint\limits_{\Omega} f(x,\: y) \dd{A} & = \int_c^d\int_a^b f(x,\: y) \dd{x} \dd{y} \\
                                                & = \int_a^b\int_c^d f(x,\: y) \dd{y} \dd{x}
@@ -273,7 +276,7 @@
     \begin{equation*}
         y=g_1(x) \text{ and } y=g_2(x)
     \end{equation*}
-    where $g_1(x) \leq g_2(x)$ for $a \leq x \leq b$:
+    where \(g_1(x) \leq g_2(x)\) for \(a \leq x \leq b\):
     \section*{Type II Regions}
     \begin{equation*}
         \iint\limits_{\Omega} f(x,\: y) \dd{A} = \int_c^d\int_{h_1(x)}^{h_2(x)} f(x,\: y) \dd{x} \dd{y}
@@ -286,17 +289,17 @@
     \begin{equation*}
         y=c \text{ and } y=d
     \end{equation*}
-    where $h_1(y) \leq h_2(y)$ for $c \leq y \leq d$.
+    where \(h_1(y) \leq h_2(y)\) for \(c \leq y \leq d\).
 
     To integrate, solve the inner integrals first.
     \section*{Vector Valued Functions}
     \begin{equation*}
         \symbf{r}:\mathbb{R} \to \mathbb{R}^n
     \end{equation*}
-    The \textbf{domain} of $\symbf{r}(t)$ is the intersection of the domains
+    The \textbf{domain} of \(\symbf{r}(t)\) is the intersection of the domains
     of its components.
 
-    The \textbf{orientation} of $\symbf{r}(t)$ is the direction of motion along the
+    The \textbf{orientation} of \(\symbf{r}(t)\) is the direction of motion along the
     curve as the value of the parameter increases.
 
     \textbf{Limits}, \textbf{derivatives} and \textbf{integrals} are all \textit{component-wise}. Each component has its \underline{own} constant of integration.
@@ -304,10 +307,10 @@
     \begin{equation*}
         \symbf{l}(t) = \symbfit{P}_0 + t\symbfit{v}
     \end{equation*}
-    where $\symbf{l}(t)$ passes through $\symbfit{P}_0$, and is parallel to $\symbfit{v}$.
+    where \(\symbf{l}(t)\) passes through \(\symbfit{P}_0\), and is parallel to \(\symbfit{v}\).
     \section*{Tangent Lines}
-    If $\symbf{r}(t)$ is differentiable at
-    $t_0$ and $\symbf{r'}(t_0)\ne\symbf{0}$
+    If \(\symbf{r}(t)\) is differentiable at
+    \(t_0\) and \(\symbf{r'}(t_0)\ne\symbf{0}\)
     \begin{equation*}
         \symbf{l}(t) = \symbf{r}(t_0)+t\symbf{r'}(t_0).
     \end{equation*}
@@ -318,14 +321,14 @@
         S = \int_a^b \norm{\symbf{r'}(t)} \dd{t}
     \end{equation*}
     \section*{Ordinary Differential Equations}
-    \textbf{Order:} highest derivative in DE.
+    \textbf{Order:} highest derivative in DE\@.
 
     \textbf{Autonomous DE:} does not depend explicitly on the independent variable.
     \section*{Qualitative Analysis}
     \begin{equation*}
         \dv{y}{t} = f(y)
     \end{equation*}
-    A fixed point is the value of $y$ for which $f(y) = 0$.
+    A fixed point is the value of \(y\) for which \(f(y) = 0\).
     \section*{Stability of Fixed Points}
     Given a positive/negative perturbation from a fixed point, that point is
 
@@ -335,33 +338,33 @@
 
     \textbf{Semi-Stable:} if one tends toward FP, and another tends away from FP
     \section*{Directly Integrable ODEs}
-    For $\dv{y}{x} = f(x)$:
+    For \(\dv{y}{x} = f(x)\):
     \begin{equation*}
         y(x) = \int f(x) \dd{x}.
     \end{equation*}
     \section*{Separable ODEs}
-    For $\dv{y}{x} = p(x) q(y)$:
+    For \(\dv{y}{x} = p(x) q(y)\):
     \begin{equation*}
         \int \frac{1}{q(y)} \dv{y}{x} \dd{x} = \int p(x) \dd{x}.
     \end{equation*}
     \section*{Linear ODEs}
-    For $\dv{y}{x} + p(x)y = q(x)$, use the \textit{integrating factor}:
-    $I(x) = \e^{\int p(x) \dd{x}}$, so that
+    For \(\dv{y}{x} + p(x)y = q(x)\), use the \textit{integrating factor}:
+    \(I(x) = \e^{\int p(x) \dd{x}}\), so that
     \begin{equation*}
         y(x) = \frac{1}{I(x)} \int I(x) q(x) \dd{x}.
     \end{equation*}
     \section*{Exact ODEs}
-    $P(x,\: y) + Q(x,\: y)\dv{y}{x} = 0$
+    \(P(x,\: y) + Q(x,\: y)\dv{y}{x} = 0\)
     has the solution
-    $\Psi(x,\: y) = c$
+    \(\Psi(x,\: y) = c\)
     iff it is exact, namely, when
-    $P_y = Q_x$,
-    where $P = \Psi_x$ and $Q = \Psi_y$. Then
+    \(P_y = Q_x\),
+    where \(P = \Psi_x\) and \(Q = \Psi_y\). Then
     \begin{gather*}
         \Psi(x,\: y) = \int P(x,\: y) \dd{x} + f(y) \\
         \Psi(x,\: y) = \int Q(x,\: y) \dd{y} + g(x)
     \end{gather*}
-    and $f(y)$ and $g(x)$ can be determined by solving these equations simultaneously.
+    and \(f(y)\) and \(g(x)\) can be determined by solving these equations simultaneously.
     \section*{Second-Order ODEs}
     \begin{equation*}
         a_2(x)y'' + a_1(x)y' + a_0(x)y = F(x)
@@ -378,7 +381,7 @@
     \begin{equation*}
         y_2(x) = v\left(x\right) y_1(x)
     \end{equation*}
-    $v(x)$ can be determined by substituting $y_2$ into the ODE, using $w(x) = v'(x)$.
+    \(v(x)\) can be determined by substituting \(y_2\) into the ODE, using \(w(x) = v'(x)\).
     \section*{General Solution}
     \begin{equation*}
         y(x) = y_H(x) + y_P(x)
@@ -396,37 +399,37 @@
         y_H(x) = c_1\e^{\lambda x} + c_2 t\e^{\lambda x}
     \end{equation*}
     \section*{Complex Conjugate Roots}
-    Given $\lambda = \alpha \pm \beta i$:
+    Given \(\lambda = \alpha \pm \beta i\):
     \begin{equation*}
         y_H(x) = \e^{\alpha x}\bigl( c_1\cos{\left( \beta x \right)} + c_2 \sin{\left( \beta x \right)} \bigr)
     \end{equation*}
     \section*{Particular Solution}
     \begin{table}[H]
         \centering
-        \begin{tabular}{c | c}
+        \begin{tabular}{c c}
             \toprule
-            $F(x)$                                                             & $y_P(x)$                               \\
+            \(F(x)\)                                                             & \(y_P(x)\)                               \\
             \midrule
             constant                                                           & A                                      \\
-            polynomial degree $n$                                              & $\displaystyle \sum_{i = 0}^n A_i x^i$ \\
-            $\e^{kx}$                                                          & $A \e^{kx}$                            \\
-            $\cos{\left( \omega x \right)}$ or $\sin{\left( \omega x \right)}$ & $A_0 \cos{\left( \omega x \right)}$    \\ & $+ A_1 \sin{\left( \omega x \right)}$ \\
+            polynomial degree \(n\)                                              & \(\displaystyle \sum_{i = 0}^n A_i x^i\) \\
+            \(\e^{kx}\)                                                          & \(A \e^{kx}\)                            \\
+            \(\cos{\left( \omega x \right)}\) or \(\sin{\left( \omega x \right)}\) & \(A_0 \cos{\left( \omega x \right)}\)    \\ & \(+ A_1 \sin{\left( \omega x \right)}\) \\
             \bottomrule
         \end{tabular}
     \end{table}
-    If $F(x)$ is a combination of the above, $y_P(x)$ should be too.
-    If the choice would be linearly dependent to $y_H(x)$, multiply by $x$ until it isn't.
+    If \(F(x)\) is a combination of the above, \(y_P(x)\) should be too.
+    If the choice would be linearly dependent to \(y_H(x)\), multiply by \(x\) until it isn't.
 
-    Substitute $y_P$ into the nonhomogeneous ODE, and solve the undetermined coefficients.
+    Substitute \(y_P\) into the nonhomogeneous ODE, and solve the undetermined coefficients.
     \section*{Spring and Mass Systems}
     \begin{equation*}
         m y'' + \gamma y' + k y = f(t)
     \end{equation*}
-    \textbf{Newton's Law:} $F = m y''$
+    \textbf{Newton's Law:} \(F = m y''\)
 
-    \textbf{Spring force:} $F_s = -k y$
+    \textbf{Spring force:} \(F_s = -k y\)
 
-    \textbf{Damping force:} $F_d = -\gamma y'$
+    \textbf{Damping force:} \(F_d = -\gamma y'\)
     \begin{align*}
         m      & : \text{mass}    & k    & : \text{spring constant} \\
         \gamma & : \text{damping} & f(t) & : \text{external force}
@@ -437,11 +440,10 @@
         v(t) - iR - L \dv{i}{t} - \frac{q}{C}      & = 0    \\
         L \dv[2]{q}{t} + R\dv{q}{t} + \frac{1}{C}q & = v(t)
     \end{align*}
-    where $\displaystyle i = \dv{q}{t}$.
+    where \(\displaystyle i = \dv{q}{t}\).
     \begin{align*}
         R & : \text{resistance} & C    & : \text{capacitance}    \\
         L & : \text{inductance} & v(t) & : \text{voltage supply}
     \end{align*}
-
 \end{multicols}
-\end{document}
+\end{document} % chktex 17
